--- a/style/styles.css
+++ b/style/styles.css
@@ -233,3 +233,159 @@ font-family: Inter;
 font-size: 20px;
 font-weight: 400;
 }
+/* holeda section */
+.holeda{
+    width: 1320px;
+    height: 986.07px;
+    margin: 0 auto;
+    margin-top: 64px;
+    position: relative;
+}
+.six-contant{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 1068px;
+    height: 260px;
+    margin: 0 auto;
+}
+.six-contant h4{
+    color: rgb(7, 2, 17);
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+}
+.six-contant h1{
+    font-family: Merriweather;
+font-size: 72px;
+font-weight: 900;
+}
+.six-span{
+    color: red;
+}
+.six-contant p{
+    color: rgba(7, 2, 17, 0.6);
+font-family: Inter;
+font-size: 20px;
+font-weight: 500;
+}
+/* six section solid color */
+.solid-color{
+    width: 1320px;
+    height: 229px;
+    background-color: rgb(255, 0, 0);
+    position: absolute;
+    top: 77%;
+}
+.six-img{
+    width: 674.82px;
+    height: 577.96px;
+    position: relative;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+}
+.six-img-div-2{
+    width: 429px;
+    height: 433px;
+    position: relative;
+    top: 28.5%;
+    left: 18.3%;
+    border-radius: 20px;
+}
+.discound{
+    position: absolute;
+    bottom: 25%;
+    left: 47%;
+    z-index: 1;
+}
+/* seven coffi style */
+.seven-contynar{
+    margin: 0 auto;
+    width: 1320px;
+    height: 1163px;
+    margin-top: 120px;
+}
+.seven-tags-styls h5{
+    color: rgb(255, 0, 0);
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+margin-bottom: 16px;
+}
+.seven-tags-styls h1{
+    color: rgb(7, 2, 17);
+font-family: Merriweather;
+font-size: 48px;
+font-weight: 900;
+margin-bottom: 22px;
+
+}
+.seven-tags-styls p{
+    color: rgba(7, 2, 17, 0.6);
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+margin-bottom: 42px;
+}
+/* seventh img all style */
+.item{
+    width: 424px;
+    height: 450px;
+}
+.item img{
+    width: 100%;
+    height: 100%;
+}
+/* grit style */
+.perent-seven{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px;
+}
+/* footer style */
+.footer{
+    width: 1600px;
+    height: 609px;
+    margin: 0 auto;
+    padding: 50px;
+
+    background-color: rgb(7, 2, 17);;
+}
+
+.contact{
+    display: flex;
+    color: #ffff;
+}
+.footer-fast-section{
+    display: flex;
+    color: #ffff;
+    width: 90%;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.hr{
+    width: 90%;
+    margin: 0 auto;
+}
+.img-last-footer{
+    width: 400px;
+    margin: 0 auto;
+    margin-top: 70px;
+    margin-bottom: 70px;
+    display: flex;
+    justify-content: space-evenly;
+}
+.footer-last-option{
+    width: 90%;
+    margin: 0 auto;
+    color: aliceblue;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+}
